# discoverEU

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Logger.hpp
res/: colormap  datamap
src/: Logger.cpp  main.cpp
